--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,18 @@
         android:theme="@style/Theme.BookSearchingUsingNaverAPI"
         tools:targetApi="31">
         <activity
+            android:name=".search.WebviewActivity"
+            android:exported="false" />
+        <activity
             android:name=".search.RecentKeywordActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".search.SearchActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
