최근 검색어 출력 완료 ToDo 검색 지우기 버튼 MM.DD 표현 중복값 처리 검색어 누르면 검색 연결

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,5 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation 'androidx.activity:activity-ktx:1.7.0'
 }
