--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
 }
